--- a/src/application/OpenAPT.fxml
+++ b/src/application/OpenAPT.fxml
@@ -104,7 +104,7 @@
                   <InnerShadow color="RED" />
                </effect>
             </Label>
-            <Label fx:id="opt2Label" alignment="CENTER" layoutX="229.0" layoutY="238.0" prefWidth="200.0">
+            <Label fx:id="opt2Label" alignment="CENTER" layoutX="229.0" layoutY="225.0" prefHeight="35.0" prefWidth="200.0">
                <effect>
                   <InnerShadow color="RED" />
                </effect>
@@ -112,7 +112,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="opt3Label" alignment="CENTER" layoutX="444.0" layoutY="242.0" prefWidth="200.0">
+            <Label fx:id="opt3Label" alignment="CENTER" layoutX="444.0" layoutY="225.0" prefHeight="35.0" prefWidth="200.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -120,7 +120,7 @@
                   <InnerShadow color="RED" />
                </effect>
             </Label>
-            <Label fx:id="opt4Label" alignment="CENTER" layoutX="659.0" layoutY="242.0" prefWidth="200.0">
+            <Label fx:id="opt4Label" alignment="CENTER" layoutX="659.0" layoutY="225.0" prefHeight="35.0" prefWidth="200.0">
                <effect>
                   <InnerShadow color="RED" />
                </effect>
