--- a/src/application/LTSPreview.fxml
+++ b/src/application/LTSPreview.fxml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.111"
+	xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LTSPreviewController">
+	<children>
+		<ScrollPane fx:id="scrollMainPane" layoutX="6.0"
+			prefHeight="600.0" prefWidth="800.0">
+			<content>
+				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0"
+					prefWidth="200.0" />
+			</content>
+		</ScrollPane>
+		<Pane fx:id="mainPane" prefHeight="600.0" prefWidth="800.0">
+			<children>
+				<Button fx:id="closeButton" layoutX="357.0" layoutY="561.0"
+					mnemonicParsing="false" onAction="#closeButton_OnAction" text="Hide preview" />
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="application.LTSPreviewController">
-   <children>
-      <Pane fx:id="mainPane" prefHeight="600.0" prefWidth="800.0">
-         <children>
-            <Button fx:id="closeButton" layoutX="357.0" layoutY="561.0" mnemonicParsing="false" onAction="#closeButton_OnAction" text="Hide preview" />
-         </children>
-      </Pane>
-   </children>
+			</children>
+		</Pane>
+	</children>
 </AnchorPane>
