--- a/src/application/Settings.fxml
+++ b/src/application/Settings.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SettingsController">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SettingsController">
    <children>
-      <Button fx:id="saveButton" layoutX="54.0" layoutY="226.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" onAction="#saveButton_OnAction"/>
-      <Button fx:id="cancelButton" layoutX="186.0" layoutY="226.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" onAction="#cancelButton_OnAction"/>
+      <Button fx:id="saveButton" layoutX="68.0" layoutY="286.0" mnemonicParsing="false" onAction="#saveButton_OnAction" prefHeight="50.0" prefWidth="50.0" />
+      <Button fx:id="cancelButton" layoutX="176.0" layoutY="286.0" mnemonicParsing="false" onAction="#cancelButton_OnAction" prefHeight="50.0" prefWidth="50.0" />
       <Label fx:id="backgroundColorLabel" layoutX="14.0" layoutY="15.0" text="Background color:">
          <font>
             <Font name="Comic Sans MS" size="14.0" />
@@ -30,5 +30,17 @@
       <ComboBox fx:id="circleColorBox" layoutX="136.0" layoutY="50.0" prefWidth="150.0" />
       <ComboBox fx:id="rectangleColorBox" layoutX="136.0" layoutY="85.0" prefWidth="150.0" />
       <ComboBox fx:id="lineColorBox" layoutX="136.0" layoutY="120.0" prefWidth="150.0" />
+      <Label fx:id="markingsColorLabel" layoutX="14.0" layoutY="155.0" text="Markings color:">
+         <font>
+            <Font name="Comic Sans MS" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="tagsColorLabel" layoutX="14.0" layoutY="190.0" text="Tags color:">
+         <font>
+            <Font name="Comic Sans MS" size="14.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="markingsColorBox" layoutX="136.0" layoutY="153.0" prefWidth="150.0" />
+      <ComboBox fx:id="tagsColorBox" layoutX="136.0" layoutY="188.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
