--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -23,6 +23,7 @@
                   <MenuItem fx:id="openFileMenuItem" mnemonicParsing="false" onAction="#openFileMenuItem_OnAction" text="Open .pb File" />
                   <MenuItem fx:id="saveFileMenuItem" mnemonicParsing="false" onAction="#saveFileMenuItem_OnAction" text="Save .pb File" />
                   <MenuItem fx:id="openAPTFileMenuItem" mnemonicParsing="false" onAction="#openAPTFileMenuItem_OnAction" text="Open APT File" />
+                  <MenuItem fx:id="exportImageMenuItem" mnemonicParsing="false" onAction="#exportImageMenuItem_OnAction" text="Export Image" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem fx:id="settingsMenuItem" mnemonicParsing="false" onAction="#settingsMenuItem_OnAction" text="Settings" />
               	  <MenuItem fx:id="exitMenuItem" mnemonicParsing="false" onAction="#exitMenuItem_OnAction" text="Exit" />
